Configure KSP and kotlin-inject

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-kotlin.code.style=official
-kotlin.version=1.7.10
 agp.version=7.3.0
-compose.version=1.2.0
+kotlin.code.style=official
+kotlinVersion=1.7.20
+kspVersion=1.7.20-1.0.6
+kotlinInjectVersion=0.5.1
+composeVersion=1.2.1
