Add markdown-editor component scaffold

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
+kotlin.mpp.stability.nowarn=true
 agp.version=7.3.0
 kotlin.code.style=official
+kotlinJvmTarget=11
 kotlinVersion=1.7.20
 kspVersion=1.7.20-1.0.6
 kotlinInjectVersion=0.5.1
