--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ kspVersion=1.8.0-1.0.9
 kotlinInjectVersion=0.6.1
 composeVersion=1.3.0
 ideaExtVersion=1.1.7
+kermitVersion=2.0.0-RC3
+flexmarkVersion=0.64.0
