--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,6 @@ kspVersion=1.9.10-1.0.13
 kotlinInjectVersion=0.6.3
 composeVersion=1.5.1
 ideaExtVersion=1.1.7
-kermitVersion=2.0.0-RC5
+kermitVersion=2.0.2
 flexmarkVersion=0.64.6
-ktorVersion=2.3.4
+ktorVersion=2.3.5
