--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 kotlin.mpp.stability.nowarn=true
 agp.version=8.3.0
+centralPortalPublisherVersion=0.0.4
 kotlin.code.style=official
 kotlinJvmTarget=21
 kotlinVersion=1.9.23
+dokkaVersion=1.9.20
 kspVersion=1.9.23-1.0.19
 kotlinInjectVersion=0.6.3
 composeVersion=1.6.1
@@ -11,3 +13,6 @@ kermitVersion=2.0.2
 flexmarkVersion=0.64.6
 ktorVersion=2.3.5
 jewelVersion=0.15.2
+gradleKeyringVersion=0.2
+
+signing.gnupg.keyName=B721CBB13FB7290CF2750597119FA4A833F67FB3
