--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,18 +3,18 @@ interactiveTextVersion = "0.1.3"
 markdownEditorVersion = "0.1.3"
 
 javaTargetVersion = "21"
-kotlinVersion = "1.9.23"
+kotlin = "2.0.0"
 
-kspVersion = "1.9.23-1.0.19"
+kspVersion = "2.0.0-1.0.23"
 centralPortalPublisherVersion = "0.0.4"
 dokkaVersion = "1.9.20"
-kotlinInjectVersion = "0.6.3"
-composeVersion = "1.6.1"
+kotlinInjectVersion = "0.7.1"
+compose-plugin = "1.6.11"
 ideaExtVersion = "1.1.7"
-kermitVersion = "2.0.2"
+kermitVersion = "2.0.4"
 flexmarkVersion = "0.64.6"
-ktorVersion = "2.3.5"
-jewelVersion = "0.19.6"
+ktorVersion = "2.3.12"
+jewelVersion = "0.19.4"
 gradleKeyringVersion = "0.2"
 
 [libraries]
@@ -33,7 +33,9 @@ ktor-client = ["ktor-client-core", "ktor-client-cio", "ktor-client-logging"]
 
 [plugins]
 jetbrains-dokka = { id = "org.jetbrains.dokka", version.ref = "dokkaVersion" }
-jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "composeVersion" }
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-ideaExt = { id = "org.jetbrains.gradle.plugin.idea-ext", version.ref = "ideaExtVersion" }
 google-ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
 keyring = { id = "me.okonecny.gradle-keyring", version.ref = "gradleKeyringVersion" }
